# alice_djs

./: .gitignore  Cargo.toml
src/: main.rs
src/audio/: audio_utils.rs  encoder.rs  mod.rs  music_manager.rs  responses.rs  track_end_handler.rs  track_scheduler.rs
src/audio/errors/: mod.rs  music_error.rs
src/bot/: bot.rs  embeds.rs  mod.rs
src/commands/: bulit.rs  command_context.rs  command_register.rs  command_trait.rs  mod.rs  traits.rs
src/commands/playback/: clear.rs  mod.rs  play.rs  playnext.rs  queue.rs  radio.rs  skip.rs  skipto.rs  volume.rs
src/config/: mod.rs
src/microservices/: microservice_client.rs  mod.rs
src/microservices/errors/: microservice_client_error.rs  mod.rs
src/model/: album.rs  artist.rs  mod.rs  track.rs  track_state.rs
src/voice/: mod.rs  voice_cmd.rs
