[package]
name = "discord-dj"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
async-trait = "0.1.89"
serenity = "0.12.5"
# 1. Dejamos a songbird limpio de códecs
songbird = { version = "0.6.0", features = ["builtin-queue"] }

# 2. Instalamos el motor de audio directamente y le encendemos los decodificadores
symphonia = { version = "0.5", features = ["aac", "mp3", "isomp4", "ogg", "flac"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
